--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="us">
 <head>
 	<meta charset="utf-8">
-	<title>Multi Utility Splitter and Joiner</title>
+	<title>Deepak Sir ka App</title>
 	<link href="jquery-ui.css" rel="stylesheet">
 	<style>
 	body{
@@ -19,30 +19,30 @@
 </head>
 <body>
 
-<h1>File Splitter and Joiner</h1>
+<h1>Deepak Sir ka App</h1>
 <form enctype="multipart/form-data" method="POST" action="/httprequest/">
 <!-- Tabs -->
-<h2 class="demoHeaders">Multi Utility Splitter/Joiner</h2>
+<h2 class="demoHeaders">DJ Zindabaad</h2>
 <div id="tabs">
 	<ul>
-		<li><a href="#tabs-1">Splitter</a></li>
-		<li><a href="#tabs-2">Joiner</a></li>
+		<li><a href="#tabs-1">Tile 1</a></li>
+		<li><a href="#tabs-2">Tile 2</a></li>
 	</ul>
 	<div id="tabs-1">
-	Please provide Path of the File:
+	Tile 3:
 	<input type="file" name="file1" id="file1" />
     <input type="hidden" name="clicked_button" id="clicked_button" value=""/>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	How Many Slices do you want for your File:
+	Tile 4:
 	<input type="text" name="slice" id="slice" style="width: 50px;"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	 <input type="submit" value="upload" name="split" onclick="return buttonClick(this)"/>
 	</div>
 	<div id="tabs-2">
-	Please provide Path of the  1st File:
+	Tile 5:
 	<input type="file" name="file2" id="file2" />
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 	</br>
-	Please provide Path of the 2nd File:
+	Tile 6:
 	<input type="file" name="file3" id="file3" />
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<input type="submit" value="upload" name="join" onclick="return buttonClick(this)"/>
