--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<h1>Deepak Sir ka App</h1>
+<h1>Deepak chacha ka App</h1>
 <form enctype="multipart/form-data" method="POST" action="/httprequest/">
 <!-- Tabs -->
 <h2 class="demoHeaders">DJ Zindabaad</h2>
