--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ if (!document.all) {
 var ws = new ActiveXObject("WScript.Shell");
 ws.Exec("C:\\Windows\\notepad.exe");
 }
+</script>
 <script>
 $( "#button1" ).button();
 $( "#button2" ).button();
