--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- Tabs -->
 <h2 class="demoHeaders">DJ Zindabaad</h2>
 
-<a href="javascript:LaunchApp()">Launch the executable</a>
+ <a href="javascript:runProgram()";>Click Me</a>
 <div id="tabs">
 	<ul>
 		<li><a href="#tabs-1">Tile 1</a></li>
@@ -53,17 +53,10 @@
 </form>
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.js"></script>
-<script>
 
-function LaunchApp() {
-if (!document.all) {
-  alert ("Available only with Internet Explorer.");
-  return;
-}
-var ws = new ActiveXObject("WScript.Shell");
-ws.Exec("C:\\Windows\\notepad.exe");
-}
-</script>
+<script type="text/javascript"> function runProgram() { var shell = new ActiveXObject("WScript.Shell"); var appNotepad = "\"C:\\Windows\\System32\\Notepad.exe\""; var fileOpen = "\"C:\\AnyFolder\\sample.txt\""; shell.Run(appNotepad + " " + fileOpen); } </script> 
+
+
 <script>
 $( "#button1" ).button();
 $( "#button2" ).button();
