--- a/index.html
+++ b/index.html
@@ -2,73 +2,57 @@
 <html lang="us">
 <head>
 	<meta charset="utf-8">
-	<title>Deepak Sir ka App</title>
+	<title>Automation Test Console</title>
 	<link href="jquery-ui.css" rel="stylesheet">
-	<style>
-	body{
-		font-family: "Trebuchet MS", sans-serif;
-		margin: 50px;
-		background: #134E5E;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #71B280, #134E5E);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #71B280, #134E5E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	}
-	.demoHeaders {
-		margin-top: 2em;
-	}
-	</style>
+	<link href="index.css" rel="stylesheet">
+	<script src="external/jquery/jquery.js"></script>
+	<script src="jquery-ui.js"></script>
 </head>
 <body>
 
-<h1>Deepak chacha ka App</h1>
+<h1 style="color:white">Test Execution Suite</h1>
 <form enctype="multipart/form-data" method="POST" action="/httprequest/">
 <!-- Tabs -->
-<h2 class="demoHeaders">DJ Zindabaad</h2>
-
- <a href="javascript:runProgram()";>Click Me</a>
-
-<div id="tabs">
-	<ul>
-		<li><a href="#tabs-1">Tile 1</a></li>
-		<li><a href="#tabs-2">Tile 2</a></li>
-	</ul>
-	<div id="tabs-1">
-	Tile 3:
-	<input type="file" name="file1" id="file1" />
-    <input type="hidden" name="clicked_button" id="clicked_button" value=""/>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	Tile 4:
-	<input type="text" name="slice" id="slice" style="width: 50px;"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	 <input type="submit" value="upload" name="split" onclick="return buttonClick(this)"/>
-	</div>
-	<div id="tabs-2">
-	Tile 5:
-	<input type="file" name="file2" id="file2" />
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-	</br>
-	Tile 6:
-	<input type="file" name="file3" id="file3" />
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<input type="submit" value="upload" name="join" onclick="return buttonClick(this)"/>
-	</div>
-</div>
+<h2 class="demoHeaders"></h2>
+	<div id="buttons">
+			<div id="first-row" align="center">
+				<a href="#" class="myButton">Environment</a>
+				<div>
+					<a href="#" class="ctef1">NWP CTEF1</a>
+					<a href="#" class="ctef1">NWP CTEF2</a>
+					<a href="#" class="ctef1">NWP PTE2</a>
+					<a href="#" class="ctef1">SOF CTEF1</a>
+					<a href="#" class="ctef1">SOF CTEF2</a>
+					<a href="#" class="ctef1">iSell CTEF1</a>
+				</div>
+			</div>	
+			<div id="second-row" align="center">
+				<a href="#" class="myButton">NWP Regression Suite</a>	
+				<div>
+					<a href="#" class="ctef1">NWP Smoke Pack</a>
+					<a href="#" class="ctef1">NWP Regression Pack</a>
+					<a href="#" class="ctef1">IWF Regression</a>
+					<a href="#" class="ctef1">ATG Regression</a>
+					<a href="#" class="ctef1">WCS Regression Back</a>
+				</div>
+			</div>
+			<div id="third-row" align="center">
+				<a href="#" class="myButton">SOF Regression Suite</a>	
+				<div>
+					<a href="#" class="ctef1">SOF Smoke Pack</a>
+					<a href="#" class="ctef1">Single Fulfilment Unit Regression Pack</a>
+					<a href="#" class="ctef1">Multiple Fulfilment Unit Regression Pack</a>
+					<a href="#" class="ctef1">SOF Order Happy Flow</a>
+					<a href="#" class="ctef1">SOF Devation Flow</a>
+					<a href="#" class="ctef1">SOF Order Replenishment</a>
+					<a href="#" class="ctef1">End To End</a>
+				</div>
+			</div>
+			<div id="submit-button" align="center">
+				<a href="#" class="submit">Submit</a>
+				<a href="#" class="submit">Reset</a>
+			</div>
+		</div>
 </form>
-<script src="external/jquery/jquery.js"></script>
-<script src="jquery-ui.js"></script>
-<script>
-$( "#button1" ).button();
-$( "#button2" ).button();
-$( "#tabs" ).tabs();
-function runProgram() { 
-		alert('Hi');
-		var shell = new ActiveXObject("WScript.Shell"); 
-		var appNotepad = "\"C:\\Windows\\System32\\Notepad.exe\"";
-		var fileOpen = "\"C:\\AnyFolder\\sample.txt\"";
-		shell.Run(appNotepad + " " + fileOpen); 
-} 
-function buttonClick(theButton){
-    document.getElementById('clicked_button').value = theButton.name;
-    return true;
-}
-</script>
 </body>
 </html>
