--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="us">
 <head>
 	<meta charset="utf-8">
-	<title>Deepak Sir ka App</title>
+	<title>Test Suite Automation </title>
 	<link href="jquery-ui.css" rel="stylesheet">
 	<style>
 	body{
