--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	function runProgram() {
 		alert('Hi');
         var shell = new ActiveXObject("WScript.Shell");
-        shell.Run("cscript C:\Automation\Execute.vbs"); 
+        shell.Exec("wscript C:\\Automation\\Execute.vbs"); 
 } 
 </script>
 </head>
