--- a/index.html
+++ b/index.html
@@ -222,14 +222,10 @@
                             <h5>Whats Next</h5>
                             <hr>
                             <div id="accordion-container">
-                                <h2 class="accordion-header"> Your Assigned Branch Office & Consultant</h2>
+                                <h2 class="accordion-header"> Upload Test Result</h2>
                                 <div class="accordion-content">
-                                  
-                                </div>
-                                <h2 class="accordion-header"> Upload Resume</h2>
-                                <div class="accordion-content">
-                                  <label for="exampleInputFile">File input</label>
-                                    <input type="file" id="exampleInputFile">
+                                  <label for="testResultFile">File input</label>
+                                    <input type="file" id="testResultFile">
                                 </div>
                             </div>
                         </div>
