Extra buttons added \

--- a/index.html
+++ b/index.html
@@ -168,19 +168,28 @@
                                     </div>
                                     <div id="regression-tab">
                                         <a class="metrostyle orgmetro" style="cursor: pointer" href="../UserGUI/Users_List.aspx">
-                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">NWP Smoke Pack </span>
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">NWP Smoke Test </span>
                                         </a>
                                         <a class="metrostyle eenmetro" style="cursor: pointer" href="">
-                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">NWP Regression Pack </span>
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">NWP Regression Test </span>
+                                        </a>
+                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ATG Smoke Test </span>
                                         </a>
                                         <a style="cursor: pointer" class="metrostyle boometro" href="../Medical/Hospitals_List.aspx">
                                              <span style="color:white;float:left;margin-top:35px;margin-left:10px;margin-right:50px">IWF Regression</span>
                                         </a>
-                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
-                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ATG Regression </span>
+                                        <a class="metrostyle eenmetro" style="cursor: pointer" href="">
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">WCS Smoke Test</span>
                                         </a>
-                                        <a class="metrostyle metrostylelarge yoometro" style="cursor: pointer" href="../Medical/Clinics_List.aspx">
-                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">WCS Regression</span>
+                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ICOW Regression Test </span>
+                                        </a>
+                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ATG Regression Test </span>
+                                        </a>
+                                        <a class="metrostyle yoometro" style="cursor: pointer" href="../Medical/Clinics_List.aspx">
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">WCS RegressionTest</span>
                                         </a>
                                     </div>
                                     </div>
