--- a/index.html
+++ b/index.html
@@ -138,54 +138,65 @@
                             <div class="step_21">   
                                 <div class="row">
                                     <div class="col-sm-4">
-                                    <div class="tile blue">
+                                    <div class="tile purple">
                                         <h3 class="title">Environment</h3>
                                     </div>
                                     <div id="env-tab">
                                         <a class="metrostyle orgmetro" style="cursor: pointer" href="../UserGUI/Users_List.aspx">
-                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">NWP CTEF1 </span>
+                                            <input type="hidden" name="ctef1" value=""/>
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">CTE-F1 </span>
                                         </a>
                                         <a class="metrostyle eenmetro" style="cursor: pointer" href="">
-                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">NWP CTEF2 </span>
+                                            <input type="hidden" name="ctef2" value=""/>
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">CTE-F2 </span>
                                         </a>
                                         <a style="cursor: pointer" class="metrostyle boometro" href="../Medical/Hospitals_List.aspx">
-                                             <span style="color:white;float:left;margin-top:35px;margin-left:10px;margin-right:50px">NWP PTE2</span>
+                                             <span style="color:white;float:left;margin-top:35px;margin-left:10px;margin-right:50px">CTE-M</span>
                                         </a>
                                         <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
-                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">SOF CTEF1 </span>
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">PTE</span>
                                         </a>
                                         <a class="metrostyle yoometro" style="cursor: pointer" href="../Medical/Clinics_List.aspx">
-                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">SOF CTEF2</span>
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">PPE-1</span>
                                         </a>
-                                        <a style="cursor: pointer" class="metrostyle toometro" href="../Admin/VisitType.aspx">
-                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:70px">iSell CTEF1</span>
+                                        <a style="cursor: pointer" class="metrostyle tile purple" href="../Admin/VisitType.aspx">
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:70px">Sprintly</span>
+                                        </a>
+                                        <a style="cursor: pointer" class="metrostyle tile yellow" href="../Admin/VisitType.aspx">
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:70px">Sprintly2</span>
+                                        </a>
+                                        <a style="cursor: pointer" class="metrostyle tile deeporange" href="../Admin/VisitType.aspx">
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:70px">Weekly</span>
+                                        </a>
+                                        <a style="cursor: pointer" class="metrostyle metrostylelarge tile otherRed" href="../Admin/VisitType.aspx">
+                                            <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:70px">Weekly2</span>
                                         </a>
                                     </div>
                                     </div>
                                     <div class="col-sm-4">
-                                    <div class="tile green">
+                                    <div class="tile otheryellow">
                                         <h3 class="title">NWP Regression Suite</h3>
                                     </div>
                                     <div id="regression-tab">
-                                        <a class="metrostyle orgmetro" style="cursor: pointer" href="../UserGUI/Users_List.aspx">
+                                        <a class="metrostyle tile violet" style="cursor: pointer" href="../UserGUI/Users_List.aspx">
                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">NWP Smoke Test </span>
                                         </a>
                                         <a class="metrostyle eenmetro" style="cursor: pointer" href="">
                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">NWP Regression Test </span>
                                         </a>
-                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
-                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ATG Smoke Test </span>
+                                        <a class="metrostyle reemetro" style="cursor: pointer" id="atg-smoketest" aria-disabled="true" href="../Medical/Branchs_List.aspx">
+                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px" >ATG Smoke Test </span>
                                         </a>
                                         <a style="cursor: pointer" class="metrostyle boometro" href="../Medical/Hospitals_List.aspx">
                                              <span style="color:white;float:left;margin-top:35px;margin-left:10px;margin-right:50px">IWF Regression</span>
                                         </a>
-                                        <a class="metrostyle eenmetro" style="cursor: pointer" href="">
+                                        <a class="metrostyle orgmetro" style="cursor: pointer" href="">
                                             <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">WCS Smoke Test</span>
                                         </a>
-                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
+                                        <a class="metrostyle tile purple" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
                                              <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ICOW Regression Test </span>
                                         </a>
-                                        <a class="metrostyle reemetro" style="cursor: pointer" href="../Medical/Branchs_List.aspx">
+                                        <a class="metrostyle tile yellow" style="cursor: pointer" aria-disabled="true" id="atg-regression" href="../Medical/Branchs_List.aspx">
                                              <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ATG Regression Test </span>
                                         </a>
                                         <a class="metrostyle yoometro" style="cursor: pointer" href="../Medical/Clinics_List.aspx">
