--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     
                     <div class="tab-pane" role="tabpanel" id="complete">
                         <div class="step44">
-<<<<<<< HEAD
+
                             <div class="btn-group" data-toggle="buttons">
                                 <label class="btn btn-primary active">
                                     <input type="radio" name="options" id="option1" autocomplete="off" checked> Radio 1 (preselected)
@@ -260,16 +260,17 @@
                                 <label class="btn btn-primary">
                                     <input type="radio" name="options" id="option3" autocomplete="off"> Radio 3
                                 </label>
-=======
+
                             <h5>Whats Next</h5>
                             <hr>
                             <div id="accordion-container">
+                                <div id="chartContainer" style="height: 300px; width: 100%;"></div>
                                 <h2 class="accordion-header"> Upload Test Result</h2>
                                   <div id="chartContainer" style="height: 300px; width: 100%;"></div>
                                 <div class="accordion-content">
                                   <label for="testResultFile">File input</label>
                                     <input type="file" id="testResultFile">
->>>>>>> 7876816ba1cd26e3c4429a4ca9294311909c3b6e
+
                                 </div>
                         </div>
                     </div>
