--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <div class="row">
                                     <div class="col-sm-4">
                                     <div class="tile purple">
-                                        <h3 class="title">Environment</h3>
+                                        <h3 class="title">Select Environment</h3>
                                     </div>
                                     <div id="env-tab">
                                         <button class="metrostyle orgmetro btn-group" data-toggle="buttons" style="cursor: pointer" onclick="showSelected();">
@@ -210,54 +210,54 @@
                                     </div>
                                     <div class="col-sm-4">
                                     <div class="tile otheryellow">
-                                        <h3 class="title">NWP Regression Suite</h3>
+                                        <h3 class="title">NWP Suite</h3>
                                     </div>
                                     <div id="regression-tab">
                                         <button class="metrostyle tile violet" style="cursor: pointer" data-toggle="buttons">
                                             <label class="btn">
-                                                <input type="radio" name="nwp-smoke-test" value="NWPFE_AUTH NWPFE_LIVE NWPFE_Preview" id="option1" autocomplete="off" checked>
+                                                <input type="radio" name="suite" value="NWPFE_AUTH NWPFE_LIVE NWPFE_Preview" id="smoke1" autocomplete="off" checked>
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">NWP Smoke Test </span>
                                                 </input>
                                             </label>    
                                         </button>
                                         <button class="metrostyle eenmetro" style="cursor: pointer" data-toggle="buttons">
                                             <label class="btn">
-                                                <input type="radio" name="nwp-smoke-test" value="NWPFE_AUTH NWPFE_LIVE NWPFE_Preview" id="option2" autocomplete="off">
+                                                <input type="radio" name="suite" value="NWPFE_AUTH NWPFE_LIVE NWPFE_Preview" id="regression1" autocomplete="off">
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">NWP Regression Test </span>
                                                 </input>
                                             </label>    
                                         </button>
                                         <button class="metrostyle reemetro" style="cursor: pointer" data-toggle="buttons" id="atg-smoketest">
                                             <label class="btn"> 
-                                                <input type="radio" name="nwp-smoke-test" value="" id="option3" autocomplete="off"> 
+                                                <input type="radio" name="suite" value="" id="option3" autocomplete="off"> 
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px" >ATG Smoke Test </span>
                                                 </input>
                                             </label>    
                                         </button>
                                         <button class="metrostyle orgmetro" style="cursor: pointer" data-toggle="buttons">
                                             <label class="btn"> 
-                                                    <input type="radio" name="nwp-smoke-test" value="CMS" id="option5" autocomplete="off">  
+                                                    <input type="radio" name="suite" value="CMS" id="smoke2" autocomplete="off">  
                                                 <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:50px">WCS Smoke Test</span>
                                                 </input>
                                             </label>
                                         </button>
                                         <button class="metrostyle tile purple" style="cursor: pointer" data-toggle="buttons">
                                             <label class="btn"> 
-                                                <input type="radio" name="nwp-smoke-test" value="ICOW" id="option6" autocomplete="off">  
+                                                <input type="radio" name="suite" value="ICOW" id="regression2" autocomplete="off">  
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ICOW Regression Test </span>
                                                 </input>
                                             </label>
                                         </button>
                                         <button class="metrostyle tile yellow" style="cursor: pointer" id="atg-regression" data-toggle="buttons">
                                             <label class="btn">  
-                                                <input type="radio" name="nwp-smoke-test" value="" id="option7" autocomplete="off">  
+                                                <input type="radio" name="suite" value="" id="option7" autocomplete="off">  
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">ATG Regression Test </span>
                                               </input>
                                             </label>
                                         </button>
                                         <button class="metrostyle yoometro metrostylelarge" style="cursor: pointer" data-toggle="buttons" >
                                             <label class="btn">  
-                                                <input type="radio" name="nwp-smoke-test" value="CMS" id="option8" autocomplete="off">  
+                                                <input type="radio" name="suite" value="CMS" id="regression3" autocomplete="off">  
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">WCS RegressionTest</span>
                                                 </input>
                                             </label>
@@ -266,7 +266,7 @@
                                     </div>
                                     <div class="col-sm-4">
                                     <div class="tile orange">
-                                        <h3 class="title">SOF Regression Suite</h3>
+                                        <h3 class="title">SOF Suite</h3>
                                     </div>
                                     <div id="regression-tab">
                                         <button class="metrostyle orgmetro" style="cursor: pointer" data-toggle="buttons">
