--- a/index.html
+++ b/index.html
@@ -311,9 +311,8 @@
                             </div>
                         </div>
                         <ul class="list-inline pull-right margin-top-1">
-                            <li><button type="button" class="btn btn-primary next-step" onclick="updateMDF();">Save</button></li>
+                            <li><button type="button" class="btn btn-primary next-step" onclick="updateMDF();">Execute Now</button></li>
                             <li><button type="button" class="btn btn-primary next-step" onclick="readMRF();">Reset</button></li>
-                            <li><button type="button" class="btn btn-default next-step" onclick="runVBS();">Execute Now</button></li>
                             <li><button type="button" class="btn btn-primary next-step">Scheduled for later</button></li>                        
                         </ul>
                     </div>
