--- a/index.html
+++ b/index.html
@@ -311,17 +311,11 @@
                             </div>
                         </div>
                         <ul class="list-inline pull-right margin-top-1">
-<<<<<<< HEAD
-                            <li><button type="button" id="save" class="btn btn-primary next-step" onclick="updateMDF();">Save</button></li>
+
+                            <li><button type="button" id="execute" class="btn btn-primary next-step" onclick="updateMDF();">Execute Now</button></li>
                             <li><button type="button" id="reset" class="btn btn-primary next-step" onclick="readMRF();">Reset</button></li>
-                            <li><button type="button" id="execute" class="btn btn-default next-step" onclick="runVBS();">Execute Now</button></li>
                             <li><button type="button" id="schedule-later" class="btn btn-primary next-step">Scheduled for later</button></li>                        
-=======
-                            <li><button type="button" class="btn btn-primary next-step" onclick="updateMDF();">Execute Now</button></li>
-                            <li><button type="button" class="btn btn-primary next-step" onclick="readMRF();">Reset</button></li>
-                            <li><button type="button" class="btn btn-primary next-step">Scheduled for later</button></li>                        
->>>>>>> e70b808404448adef1fd4d5a28f0dac262a912ed
-                        </ul>
+                            </ul>
                     </div>
                     
                     <div class="tab-pane" role="tabpanel" id="complete">
