--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     <div id="env-tab">
                                         <button class="metrostyle orgmetro btn-group" data-toggle="buttons" style="cursor: pointer" onclick="showSelected();">
                                             <label class="btn">
-                                                <input type="radio" name="environment" value="CTE-F1" id="option1" autocomplete="off" >
+                                                <input type="radio" name="environment" value="CTE-F1" id="option1" checked autocomplete="off" >
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">CTE-F1 </span>
                                                 </input>                            
                                             </label>
